--- a/src/components/counter.css
+++ b/src/components/counter.css
@@ -1,9 +1,12 @@
-.counter {
+.Counter {
     display: flex;
     align-items: center;
+    flex-direction: column;
+    gap: 30px;
     padding: 40px 20px 40px 20px;
     background: #dcbee8;
     background: linear-gradient(90deg, rgba(220, 190, 232, 1) 0%, rgba(200, 247, 219, 1) 50%, rgba(235, 157, 170, 1) 100%);
     color: black;
     border-radius: 8px;
+    margin: 20px 260px 20px 260px;
 }
